--- a/Chapter_5_Sequences_Lists_and_Tuples.ipynb
+++ b/Chapter_5_Sequences_Lists_and_Tuples.ipynb
@@ -3383,10 +3383,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line added by Ankit Srivastava\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Line added by Ankit Srivastava\")"
+   ]
   }
  ],
  "metadata": {
@@ -3408,7 +3418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
